# MultipleFrameStichingIntoSingleWithOpenGL

./: README.md  local.properties
app/: build.gradle
app/src/main/assets/shaders/: 2xbr.shader
app/src/main/cpp/: CMakeLists.txt  cl_code.h  cl_wrapper.cpp  cl_wrapper.h  gl_code.cpp  libopencl.c  libopencl.h  util.cpp
app/src/main/java/com/android/gl2jni/: GL2JNIView.java
